<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="test.com.shoushi.activity.LoginActivity"
    android:background="@mipmap/bg_denglu"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/img_logo"
            android:layout_gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.5"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:background="#99FFFFFF"
            >


            <EditText
                android:id="@+id/et_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:drawableLeft="@mipmap/img_d_yonghu"
                android:hint="@string/login_number"
                android:maxLength="11"
                android:digits="0123456789"
                android:paddingLeft="20dp"
                android:drawablePadding="20dp"
                android:textColor="#747474"

                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FFF"
                ></View>
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:drawableLeft="@mipmap/img_d_mima"
                android:hint="@string/login_password"
                android:paddingLeft="20dp"
                android:maxLength="20"
                android:drawablePadding="20dp"
                android:textColor="#747474"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btn_loging"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loging"
            android:textColor="#FFF"
            android:background="@drawable/btn_bg"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            />
        <Button
            android:id="@+id/btn_reigst"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reigst"
            android:textColor="#FFF"
            android:background="@drawable/btn_bg"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <TextView
            android:id="@+id/tv_repass"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repass"
            android:gravity="center"
            android:textColor="#FFF"
            />


    </LinearLayout>





</LinearLayout>
