<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="test.com.shoushi.activity.ReigstActivity"
    android:background="@mipmap/bg_zhuce"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Liisten"
            android:textSize="30dp"
            android:gravity="center"
            android:textStyle="bold"
            android:typeface="sans"
            android:textColor="#B2ABAB"
            android:layout_marginTop="30dp"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="#99FFFFFF"
        android:orientation="vertical"

        >


        <EditText
            android:id="@+id/reigst_number"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/phone"
            android:paddingLeft="10dp"
            android:maxLength="11"
            android:digits="0123456789"
            android:textColor="#747474"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF"
            android:layout_marginLeft="20dp"
            ></View>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/reigst_code"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/code"
                android:paddingLeft="10dp"
                android:layout_weight="3"
                android:maxLength="6"
                android:digits="0123456789"
                android:textColor="#747474"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#FFF"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                ></View>

            <Button
                android:id="@+id/btn_reigst_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:text="@string/get_code"
                android:textColor="#FF61B4"
                android:background="@null"
                />

        </LinearLayout>

        <View

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF"
            android:layout_marginLeft="20dp"
            ></View>
        <EditText
            android:id="@+id/reigst_password"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/pass"
            android:paddingLeft="10dp"
            android:maxLength="20"
            android:textColor="#747474"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF"
            android:layout_marginLeft="20dp"
            ></View>


        <Button
            android:id="@+id/btn_reigst"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reigst"
            android:textColor="#FFF"
            android:background="@drawable/btn_bg_shape_on"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

    </LinearLayout>


</LinearLayout>
